fix(background): fill in white space at bottom of page (JL-3)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,13 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+@layer base {
+  html {
+    @apply bg-background
+  }
+}
+
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -28,4 +34,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
